--- a/ubuntu/mongodb/init_mongo.conf
+++ b/ubuntu/mongodb/init_mongo.conf
@@ -1,3 +1,3 @@
-[program:init-replicaset]
+[program:init-mongo]
 command = /bin/bash -c 'sleep 10 && /usr/bin/mongo localhost:27017 </tmp/init.js'
 autorestart = false
